@@ -1,3 +1,5 @@
+- Refactor: Moves xls classes to core api [#qubIT-Omnis-6038]
+
 2.22.0 (17-06-2024)
 - Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]
 
